# nemlig_cli

./: .env.example  .gitignore  chrome-devtools-mcp-wrapper-macos.sh  justfile  nemlig_api.md  nemlig_cli.py  pyproject.toml  server.py
